force-app/main/default/objects/iWave_PROscores__iWave_Integration_API_Identity__mdt/iWave_PROscores__iWave_Integration_API_Identity__mdt.object-meta.xml
<CustomObject>
    <label>iWave Integration API Identity</label>
    <pluralLabel>iWave Integration API Identities</pluralLabel>
</CustomObject>