force-app/main/default/objects/iWave_PROscores__iWave_Integration_API_Identity__mdt/fields/iWave_PROscores__Auth_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Auth_Provider_Name__c</fullName>
    <label>Auth Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>