force-app/main/default/objects/iWave_PROscores__iWave_Integration_API_Identity__mdt/fields/iWave_PROscores__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>