force-app/main/default/objects/iWave_PROscores__iWave_Integration_API_Identity__mdt/fields/iWave_PROscores__Token_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Token_Endpoint_URL__c</fullName>
    <label>Token Endpoint URL</label>
    <type>Url</type>
</CustomField>